--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^17.0.2",
     "react-contenteditable": "^3.3.6",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "sweetalert2": "^11.1.10",
     "web-vitals": "^1.0.1"
   },
